--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://fiver-db_owner:cC0PJXeUdpQ2@ep-tiny-darkness-a51kflcc.us-east-2.aws.neon.tech/fiver-db?sslmode=require"
+DATABASE_URL="use your own database url"
